# lab1231-ecg-prj

./: .gitignore  README.md
doc/: README
wrt/: Untitled Document
ws/bash/: .gitignore  acquire.sh  convert.sh
ws/cpp/: .gitignore  CMakeLists.txt  Doxyfile  README
ws/cpp/driver/: ads1298.c  gpio_mmap.h  spi_soft.h
ws/cpp/pre/: daubechies4.h  ecg_sorting.h  qrs_det.h
ws/cpp/src/: CMakeLists.txt
ws/cpp/src/Demo/: CMakeLists.txt  demo.cxx
ws/cpp/src/Hello/: CMakeLists.txt  hello.cxx
ws/cpp/src/array-const/: CMakeLists.txt  ecg_array_const.cc  ecg_array_const.h  matsign.c
ws/cpp/src/driver/: ads1298.h  gpio_mmap.c  spi_soft.c
ws/cpp/src/dwt/: CMakeLists.txt
ws/cpp/src/main/: CMakeLists.txt  ecg_12.c  ecg_compress.cc  pipeline.cc
ws/cpp/src/norm/: CMakeLists.txt  backup_ecg_norm.cc  ecg_norm.cc  ecg_norm.h  gsl_fft_resampler.h  normalization.h
ws/cpp/src/pre/: CMakeLists.txt  backup_ecg_signal_preprocessor.cc  backup_ecg_signal_preprocessor_normalisasi.cc  backup_normalization.h  debug_util.h  dwt.c  ecg_denoising.h  ecg_signal_preprocessor.cc  ecg_signal_preprocessor.h  normalization.h  qrs_det.h  wave_stat.c  wavelet_statistic.h  wavelet_tes.c  wavelet_util.h
ws/cpp/src/spiht/: CMakeLists.txt  ecg_spiht.cc  ecg_spiht.h  ecg_spiht_old.cc
ws/cpp/src/util/: CMakeLists.txt  csv_io.cc  csv_io.h  debugger.cc  debugger.h  ecg_file_util.cc  ecg_file_util.h  eigenlib_support.cc  eigenlib_support.h  file_util_old.h  macro.h
ws/cpp/test/: a.out  test.cpp
ws/cpp/util/: file_util.h
ws/cpp/wavelet-dec/: README
ws/matlab/array-const/: ecg2mat.m
ws/matlab/norm/: beat_unscaling.m  scale_beat.m  unscale_beat.m  unscale_beat_all.m  unsegment_beat.m
ws/matlab/opt/: fcm_cluster.m  reorder_beat.m  set_ecg_res.m  single2multi.m  unorder_beat.m
ws/matlab/pre/: bandpass.m  bwr.m  preprocess.m  preprocess_sig.m
ws/matlab/spiht/: SPIHT_dec.m  SPIHT_enc.m  SPIHT_err.m
ws/matlab/test/: test_reorder.m  test_scale_beat.m  testing.m
ws/matlab/unknown/: comp_multi_signal.m  comp_signal.m  optimal_rate.m  optimal_wavelet.m  scale2one.m
ws/matlab/util/: diffdecodevec.m  diffencodevec.m  get_ecg_model.m  get_ecg_res.m  lead_corr.m  load_rec_signal.m  lowpass.m  psnr.m  quicksort.m  wfdbToMat.sh
ws/octave/: .gitignore  init_ws.m
ws/octave/array-const/: ecg2mat.m  mat2ecg.m  multi2single.m  run_array_const.m  single2multi.m
ws/octave/eval/: get_PRD_all.m  plot_cmpr.m  run_eval.m
ws/octave/main/: codec.m  codec_all.m  codec_all_non_pre.m  codec_non_pre.m  compress.m  decompress.m  pipeline.m  preprocess_2.m  run_preprocess.m  temp_codec.m  temp_codec_all.m
ws/octave/norm/: beat_scaling_all.m  beat_unscaling.m  fftResample.m  run_norm.m  scale_beat.m  scale_beat_all.m  segment_beat.m  unscale_beat.m  unscale_beat_all.m  unsegment_beat.m
ws/octave/opt/: fcm_cluster.m  multi2single.m  reorder_beat.m  set_ecg_res.m  unorder_beat.m
ws/octave/plotter/: plot_ecg.m  plot_ecg_sani_ori.m
ws/octave/pre/: bwr.m  bwr_all.m  select_lead.m
ws/octave/preprocess/: bwr_all.m  lowpass.m  preprocess.m  run_preprocess.m
ws/octave/spiht/: SPIHT_enc.m  SPIHT_err.m  decode.m  decode_2.m  func_MyDescendant.m  func_SPIHT_Demo_Main.m  run_spiht.m
ws/octave/test/: test_get_descendant.m  test_reorder.m  test_scale_beat.m  testing.m
ws/octave/unknown/: batch.m  beat_scaling_all.m  comp_norm.m  (+6 more)
(+57 files in other folders)
